--- a/openstack/monasca-ui/monasca-ui.spec.j2
+++ b/openstack/monasca-ui/monasca-ui.spec.j2
@@ -27,6 +27,11 @@ BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('python-monascaclient') }}
 Requires:       {{ py2pkg('horizon-plugin-monasca-ui') }} = %{version}
 BuildArch:      noarch
+# These patches cannot be merged into stable/ocata upstream: only bug and security
+# fixes are accepted into stable/ocata at this stage, so adding them here:
+Patch1:         drilldown-dimensions.patch
+# FIXME: replace by official patch once https://review.openstack.org/518017 lands
+Patch2:         allow-raw-grafana-links.patch
 
 %description
 The Monasca UI Horizon plugin adds Monitoring panel to the OpenStack dashboard.
@@ -37,11 +42,24 @@ Requires:      {{ py2pkg('Django') }}
 Requires:      {{ py2pkg('pbr') }}
 Requires:      {{ py2pkg('python-monascaclient') }}
 
+%if 0%{?suse_version}
+%package -n grafana-monasca-ui-drilldown
+Summary:       Scripted Grafana dashboard for alarm drilldown links
+Requires:      grafana
+BuildRequires: grafana
+%endif
+
 %description -n {{ py2pkg('horizon-plugin-monasca-ui') }}
 The Monasca UI Horizon plugin adds Monitoring panel to the OpenStack dashboard.
 
+%if 0%{?suse_version}
+%description -n grafana-monasca-ui-drilldown
+This adds a scripted dashboard to Grafana 2 and higher that the Monitoring
+panel's Alarms tab links to when generating drilldown links for alarms.
+%endif
+
 %prep
-%autosetup -n %{sname}-{{ upstream_version }}
+%autosetup -p 1 -n %{sname}-{{ upstream_version }}
 %py_req_cleanup
 
 %build
@@ -54,6 +72,8 @@ install -m 0755 -d %{buildroot}%{http_dashboard_dir}/openstack_dashboard/enabled
 install -m 0755 -d %{buildroot}%{http_dashboard_dir}/openstack_dashboard/conf/
 cp -a monitoring/enabled/_50_admin_add_monitoring_panel.py %{buildroot}%{http_dashboard_dir}/openstack_dashboard/enabled/
 cp -a monitoring/conf/monitoring_policy.json %{buildroot}%{http_dashboard_dir}/openstack_dashboard/conf/
+install -m 0755 -d %{buildroot}%{_datadir}/grafana/public/dashboards/
+install -m 644 grafana-dashboards/drilldown.js %{buildroot}%{_datadir}/grafana/public/dashboards/
 %fdupes %{buildroot}%{python2_sitelib}
 %fdupes %{buildroot}%{http_dashboard_dir}
 
@@ -67,6 +87,12 @@ su %{apache_user} -s /bin/sh -c "python %{http_dashboard_dir}/manage.py collects
 %{http_dashboard_dir}/openstack_dashboard/enabled/_50_admin_add_monitoring_panel.py
 %{http_dashboard_dir}/openstack_dashboard/conf/monitoring_policy.json
 %doc ChangeLog README.md LICENSE
+
+%if 0%{?suse_version}
+%files -n grafana-monasca-ui-drilldown
+%license LICENSE
+%{_datadir}/grafana/public/dashboards/drilldown.js
+%endif
 
 %files -n {{ py2pkg('horizon-plugin-monasca-ui') }}
 %doc README.md
