--- a/openstack/os-client-config/os-client-config.spec.j2
+++ b/openstack/os-client-config/os-client-config.spec.j2
@@ -10,9 +10,9 @@ Group:          Development/Languages/Python
 URL:            https://launchpad.net/%{sname}
 Source0:        https://files.pythonhosted.org/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
-BuildRequires:  python-devel
-BuildRequires:  {{ py2pkg('pbr') }}
-BuildRequires:  {{ py2pkg('setuptools') }}
+BuildRequires:  {{ py2pkg('devel', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('pbr', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('setuptools', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('PyYAML') }}
 Requires:       {{ py2pkg('appdirs') }}
 Requires:       {{ py2pkg('keystoneauth1') }}
@@ -31,6 +31,7 @@ BuildRequires:  {{ py2pkg('testrepository') }}
 BuildRequires:  {{ py2pkg('testscenarios') }}
 BuildRequires:  {{ py2pkg('testtools') }}
 %endif
+%python_subpackages
 
 %description
 os-client-config is a library for collecting client configuration for
@@ -41,13 +42,13 @@ files, and it also contains some vendor specific default values so that
 you don't have to know extra info to use OpenStack.
 
 %if %{with docs}
-%package doc
+%package -n python-os-client-config-doc
 Summary:        Documentation for OpenStack client configuration library
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 BuildRequires:  {{ py2pkg('reno') }}
 
-%description doc
+%description -n python-os-client-config-doc
 Documentation for the os-client-config library.
 %endif
 
@@ -56,7 +57,7 @@ Documentation for the os-client-config library.
 %py_req_cleanup
 
 %build
-%{py2_build}
+%python_build
 %if %{with docs}
 # generate html docs
 %{__python2} setup.py build_sphinx
@@ -65,7 +66,7 @@ rm -rf html/.{doctrees,buildinfo}
 %endif
 
 %install
-%{py2_install}
+%python_install
 
 %if %{with test}
 %check
@@ -73,14 +74,14 @@ export PYTHONPATH="%{python2_sitearch}:%{python2_sitelib}:%{buildroot}%{python2_
 testr init && testr run
 %endif
 
-%files
+%files %{python_files}
 %license LICENSE
 %doc README.rst
-%{python2_sitelib}/os_client_config
-%{python2_sitelib}/*.egg-info
+%{python_sitelib}/os_client_config
+%{python_sitelib}/*.egg-info
 
 %if %{with docs}
-%files doc
+%files -n python-os-client-config-doc
 %doc doc/build/html
 %license LICENSE
 %endif
