Fix rpm group for documentation subpackages
There needs to be at least two entries in a group, toplevel
groups are not allwed within SUSE.

Change-Id: Ida5d6a7ff3c9eef02f55db367b107432d1888686
(cherry picked from commit 9d8fb4943cc16c5117ffeb81f7539bc1e1b2cd45)

--- a/openstack/aodhclient/aodhclient.spec.j2
+++ b/openstack/aodhclient/aodhclient.spec.j2
@@ -39,7 +39,7 @@ provides a Python API (the aodhclient module) and a command-line tool.
 
 %package doc
 Summary:        Documentation for OpenStack Aodh API Client
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 
