--- a/openstack/keystone/keystone.spec.j2
+++ b/openstack/keystone/keystone.spec.j2
@@ -112,7 +112,7 @@ This package contains the Keystone Python library.
 
 %package doc
 Summary:        Documentation for OpenStack Identity Service
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('PasteDeploy') }}
 BuildRequires:  {{ py2pkg('Routes') }}
 BuildRequires:  {{ py2pkg('Sphinx') }}
