--- a/openstack/neutron/neutron.spec.j2
+++ b/openstack/neutron/neutron.spec.j2
@@ -227,7 +227,7 @@ SR-IOV network cards.
 %if 0%{?with_doc}
 %package doc
 Summary:        Documentation for OpenStack Networking Service
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 
