--- a/openstack/os-traits/os-traits.spec.j2
+++ b/openstack/os-traits/os-traits.spec.j2
@@ -31,7 +31,7 @@ network, or device trait.
 
 %package doc
 Summary:        Documentation for OpenStack traits Library
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 
