--- a/openstack/pyghmi/pyghmi.spec.j2
+++ b/openstack/pyghmi/pyghmi.spec.j2
@@ -25,7 +25,7 @@ this library into python code
 
 %package doc
 Summary:        General Hardware Management Initiative (IPMI and others) -- Documentation
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
