--- a/openstack/python-dracclient/python-dracclient.spec.j2
+++ b/openstack/python-dracclient/python-dracclient.spec.j2
@@ -26,7 +26,7 @@ Library for managing machines with Dell iDRAC cards.
 
 %package doc
 Summary:        Documentation for OpenStack Drac API Client
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 BuildRequires:  {{ py2pkg('reno') }}
