--- a/openstack/python-freezerclient/python-freezerclient.spec.j2
+++ b/openstack/python-freezerclient/python-freezerclient.spec.j2
@@ -37,7 +37,7 @@ Client library for Freezer built on the Freezer API. It provides a Python API
 
 %package doc
 Summary:        Documentation for OpenStack Freezer API client libary
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
