--- a/openstack/python-glanceclient/python-glanceclient.spec.j2
+++ b/openstack/python-glanceclient/python-glanceclient.spec.j2
@@ -44,7 +44,7 @@ glanceclient module), and a command-line script (glance). Each implements
 
 %package doc
 Summary:        Documentation for OpenStack Glance API Client
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
