--- a/openstack/python-heatclient/python-heatclient.spec.j2
+++ b/openstack/python-heatclient/python-heatclient.spec.j2
@@ -45,7 +45,7 @@ the OpenStack Heat API.
 
 %package doc
 Summary:        Documentation for OpenStack Heat API Client
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
