--- a/openstack/python-k8sclient/python-k8sclient.spec.j2
+++ b/openstack/python-k8sclient/python-k8sclient.spec.j2
@@ -28,7 +28,7 @@ Client library for K8s built on the K8s API. It provides a Python API
 
 %package doc
 Summary:        Documentation for OpenStack K8s API client libary
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 
