--- a/openstack/python-keystoneclient/python-keystoneclient.spec.j2
+++ b/openstack/python-keystoneclient/python-keystoneclient.spec.j2
@@ -44,7 +44,7 @@ Client library for interacting with Openstack Identity API.
 
 %package doc
 Summary:        Documentation for OpenStack Identity API Client
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
