--- a/openstack/python-mistralclient/python-mistralclient.spec.j2
+++ b/openstack/python-mistralclient/python-mistralclient.spec.j2
@@ -39,7 +39,7 @@ Client library for Mistral built on the Mistral API. It provides a Python API
 
 %package doc
 Summary:        Documentation for OpenStack Mistral API client libary
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
