--- a/openstack/python-muranoclient/python-muranoclient.spec.j2
+++ b/openstack/python-muranoclient/python-muranoclient.spec.j2
@@ -51,7 +51,7 @@ Client library for Murano built on the Murano API. It provides a Python API
 
 %package doc
 Summary:        Documentation for OpenStack Magnum API client libary
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 BuildRequires:  {{ py2pkg('reno') }}
