--- a/openstack/python-oneviewclient/python-oneviewclient.spec.j2
+++ b/openstack/python-oneviewclient/python-oneviewclient.spec.j2
@@ -29,7 +29,7 @@ Client library for Oneview built on the Oneview API. It provides a Python API
 
 %package doc
 Summary:        Documentation for OpenStack Oneview API client libary
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 
