--- a/openstack/python-troveclient/python-troveclient.spec.j2
+++ b/openstack/python-troveclient/python-troveclient.spec.j2
@@ -46,7 +46,7 @@ implements 100% (or less ;) ) of the Trove API.
 
 %package doc
 Summary:        Documentation for OpenStack DBaaS API.
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
