--- a/openstack/python-watcherclient/python-watcherclient.spec.j2
+++ b/openstack/python-watcherclient/python-watcherclient.spec.j2
@@ -43,7 +43,7 @@ Client library for Watcher built on the Watcher API. It provides a Python API
 
 %package doc
 Summary:        Documentation for OpenStack Watcher API client libary
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
