--- a/openstack/python-zaqarclient/python-zaqarclient.spec.j2
+++ b/openstack/python-zaqarclient/python-zaqarclient.spec.j2
@@ -45,7 +45,7 @@ Python client to Zaqar Queueing API.
 
 %package doc
 Summary:        Documentation for OpenStack Zaqar Queueing API
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
