--- a/openstack/python-ceilometerclient/python-ceilometerclient.spec.j2
+++ b/openstack/python-ceilometerclient/python-ceilometerclient.spec.j2
@@ -43,7 +43,7 @@ provides a Python API (the ceilometerclient module) and a command-line tool
 
 %package doc
 Summary:        Documentation for OpenStack Ceilometer API Client
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 
