--- a/openstack/python-magnumclient/python-magnumclient.spec.j2
+++ b/openstack/python-magnumclient/python-magnumclient.spec.j2
@@ -50,7 +50,7 @@ Client library for Magnum built on the Magnum API. It provides a Python API
 
 %package doc
 Summary:        Documentation for OpenStack Magnum API client libary
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
