--- a/openstack/python-neutronclient/python-neutronclient.spec.j2
+++ b/openstack/python-neutronclient/python-neutronclient.spec.j2
@@ -54,7 +54,7 @@ Neutron's API.
 
 %package doc
 Summary:        Documentation for OpenStack Neutron API Client
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 BuildRequires:  {{ py2pkg('reno') }}
