--- a/openstack/python-saharaclient/python-saharaclient.spec.j2
+++ b/openstack/python-saharaclient/python-saharaclient.spec.j2
@@ -42,7 +42,7 @@ Python client library for interacting with OpenStack Sahara API.
 
 %package doc
 Summary:        Documentation for Client library for OpenStack Sahara API
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
