--- a/openstack/python-solumclient/python-solumclient.spec.j2
+++ b/openstack/python-solumclient/python-solumclient.spec.j2
@@ -50,7 +50,7 @@ Client library for Solum built on the Solum API. It provides a Python API
 
 %package doc
 Summary:        Documentation for OpenStack Solum API client libary
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
