Fix rpm group for documentation subpackages
There needs to be at least two entries in a group, toplevel
groups are not allwed within SUSE.

Change-Id: Ida5d6a7ff3c9eef02f55db367b107432d1888686

--- a/openstack/debtcollector/debtcollector.spec.j2
+++ b/openstack/debtcollector/debtcollector.spec.j2
@@ -38,7 +38,7 @@ future deprecations.
 
 %package -n python-debtcollector-doc
 Summary:        Documentation for %{name}
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme', py_versions=['py2', 'py3']) }}
 
