--- a/openstack/karbor/karbor.spec.j2
+++ b/openstack/karbor/karbor.spec.j2
@@ -131,7 +131,7 @@ This package contains the Karbor Python library.
 %if 0%{?with_doc}
 %package doc
 Summary:        Documentation for OpenStack Application Data Protection Service
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 
