--- a/openstack/nova/nova.spec.j2
+++ b/openstack/nova/nova.spec.j2
@@ -423,7 +423,7 @@ spice HTML5 console access service to Virtual Machines.
 %if 0%{?with_doc}
 %package doc
 Summary:        Documentation for OpenStack Compute
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  graphviz
 BuildRequires:  {{ py2pkg('Babel') }}
 BuildRequires:  {{ py2pkg('Paste') }}
