--- a/openstack/os-traits/os-traits.spec.j2
+++ b/openstack/os-traits/os-traits.spec.j2
@@ -30,7 +30,7 @@ network, or device trait.
 
 %package doc
 Summary:        Documentation for OpenStack traits Library
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
