--- a/openstack/oslo.db/oslo.db.spec.j2
+++ b/openstack/oslo.db/oslo.db.spec.j2
@@ -57,7 +57,7 @@ to the different backends and helper utils.
 
 %package doc
 Summary:        Documentation for the Oslo database handling library
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
