--- a/openstack/python-novaclient/python-novaclient.spec.j2
+++ b/openstack/python-novaclient/python-novaclient.spec.j2
@@ -43,7 +43,7 @@ the OpenStack Nova API.
 
 %package doc
 Summary:        Documentation for OpenStack Nova API Client
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 BuildRequires:  {{ py2pkg('reno') }}
