--- a/openstack/python-scciclient/python-scciclient.spec.j2
+++ b/openstack/python-scciclient/python-scciclient.spec.j2
@@ -33,7 +33,7 @@ Client library for Scci built on the Scci API. It provides a Python API
 
 %package doc
 Summary:        Documentation for OpenStack Scci API client libary
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 
