--- a/openstack/python-tripleoclient/python-tripleoclient.spec.j2
+++ b/openstack/python-tripleoclient/python-tripleoclient.spec.j2
@@ -41,7 +41,7 @@ for TripleO.
 
 %package doc
 Summary:        Documentation for OpenstackClient plugin for tripleoclient
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 
