--- a/openstack/stevedore/stevedore.spec.j2
+++ b/openstack/stevedore/stevedore.spec.j2
@@ -35,7 +35,7 @@ dynamically loaded extensions.
 
 %package -n python-stevedore-doc
 Summary:        Documentation for %{name}
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx', py_versions=['py2']) }}
 Provides:       %{python_module stevedore-doc = %{version}}
 
