--- a/openstack/os-win/os-win.spec.j2
+++ b/openstack/os-win/os-win.spec.j2
@@ -41,7 +41,7 @@ nova, cinder, networking-hyperv.
 
 %package doc
 Summary:        Documentation for OpenStack Windows/Hyper-V Library
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
