--- a/openstack/oslo.policy/oslo.policy.spec.j2
+++ b/openstack/oslo.policy/oslo.policy.spec.j2
@@ -35,7 +35,7 @@ RBAC policy enforcement library for OpenStack.
 
 %package doc
 Summary:        Documentation for the Oslo Policy library
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
