--- a/openstack/python-cinderclient/python-cinderclient.spec.j2
+++ b/openstack/python-cinderclient/python-cinderclient.spec.j2
@@ -41,7 +41,7 @@ Each implements 100% of the OpenStack Cinder API.
 
 %package doc
 Summary:        Documentation for OpenStack Cinder API Client
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 BuildRequires:  {{ py2pkg('reno') }}
